--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,3 +19,9 @@ credentials.super.admin.email=super.admin@gmail.com
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
+
+
+cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY_ID}
+cloud.aws.credentials.secretKey=${AWS_SECRET_ACCESS_KEY}
+cloud.aws.region=${AWS_REGION}
+s3.bucket.name=${S3_BUCKET_NAME}
