--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <properties>
         <java.version>22</java.version>
         <jwt.version>0.12.5</jwt.version>
+        <mapper.version>1.6.2</mapper.version>
+        <amazon.version>2.28.21</amazon.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -55,6 +58,17 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapper.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapper.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
@@ -85,7 +99,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
-            <version>2.28.21</version>
+            <version>${amazon.version}</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -100,7 +114,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>http-auth-aws</artifactId>
-            <version>2.28.21</version>
+            <version>${amazon.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
